[package]
name = "visa-device-handler"
version = "0.5.1"
edition = "2021"
authors = ["LiorBuch"]
description = "a crate to handle NI-VISA connections and simplify its use."
license = "MIT"
repository = "https://github.com/LiorBuch/VisaDeviceHandler"
license-file= "LICENSE.txt"
readme = "README.md"
keywords = ["dll","so","visa","ni-visa"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
visa = "=0.1.0"
serde_json = "1.0.1"
serde = { version = "1.0.202", features = ["derive"] }
dlopen = "=0.1.8"
mutex_logger = "0.1.0"